# stellAIverse-contracts

./: Cargo.toml  README.md
contracts/agent-nft/src/: lib.rs
contracts/bridge-manager/: Cargo.toml
contracts/bridge-manager/src/: lib.rs  test.rs
contracts/evolution/src/: lib.rs
contracts/execution-hub/src/: lib.rs
contracts/faucet/src/: lib.rs
contracts/marketplace/src/: lib.rs
contracts/oracle/src/: lib.rs
contracts_backup/agent-nft/src/: contract.rs
lib/src/: admin.rs  lib.rs  storage_keys.rs  types.rs  validation.rs
