[package]
name = "bridge-manager"
version = "0.1.0"
edition = "2021"
authors = ["StellAIverse Team"]
description = "Inter-chain bridge manager for StellAIverse agents on Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellai_lib = { path = "../../lib" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellai_lib = { path = "../../lib" }

[features]
testutils = ["soroban-sdk/testutils"]

